# tanh-lib

./: .clang-format  .clang-tidy  .clangd  .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Config.cmake.in  README.md  STYLE.md  TODO.md  justfile
.claude/: settings.json
.claude/hooks/: format-ts.sh  format.sh  lint-ts.sh  tidy.sh  typecheck-ts.sh
.github/workflows/: pr-checks.yml
cmake/: bin2cpp.cmake  binary_data.cmake  gtest-deps.cmake  install.cmake  package.cmake  real-time-sanitizers.cmake  sanitizers.cmake  test-deps.cmake
cmake/toolchain/: ios.toolchain.cmake
docs/: conventions.md
examples/audio_io_ios/: AppDelegate.mm  CMakeLists.txt  Info.plist  README.md  ViewController.mm
examples/ios/audio-io/: AppDelegate.h  AppDelegate.mm  CMakeLists.txt  README.md  ViewController.mm  main.mm
examples/ios/audio_io/: AppDelegate.mm  CMakeLists.txt  Info.plist  ViewController.mm
include/tanh/: audio_io.h  core.h  dsp.h  state.h  tanh.h
include/tanh/audio-io/: AndroidAudioDevices.h  AudioDeviceInfo.h  AudioDeviceManager.h  AudioFileLoader.h  AudioFileSink.h  AudioIODeviceCallback.h  AudioPlayerSource.h  DataSource.h  iOSAudioDevices.h
include/tanh/audio_io/: AndroidAudioDevices.h  AudioDeviceInfo.h  AudioDeviceManager.h  AudioFileLoader.h  AudioFileSink.h  AudioIODeviceCallback.h  AudioPlayerSource.h  DataSource.h  iOSAudioDevices.h
include/tanh/core/: AtomicSharedPtr.h  Dispatcher.h  Exports.h  Logger.h  Numbers.h
include/tanh/core/threading/: RCU.h
include/tanh/dsp/: BaseProcessor.h  DspTypes.h  MetronomePlayer.h
include/tanh/dsp/analysis/: Follower.h  NoteFilter.h  OnsetDetector.h
include/tanh/dsp/audio/: AudioBuffer.h  AudioBufferView.h  AudioDataStore.h  MemoryBlock.h  RingBuffer.h
include/tanh/dsp/filter/: DCBlocker.h  OnePole.h  Svf.h
include/tanh/dsp/fx/: ConstellationReverb.h  IntellijelWavefolder.h  RingsChorus.h  RingsEnsemble.h  RingsReverb.h  StereoFDN.h
include/tanh/dsp/granular/: GrainProcessor.h  GrainVisualizationListener.h
include/tanh/dsp/metronome/: MetronomePlayer.h
include/tanh/dsp/resonator/: ParamSmoother.h  RingBuffer.h  RingsModalResonator.h  RingsPatch.h  RingsResonator.h  RingsString.h  RingsStrummer.h  SampleRateConverter.h
include/tanh/dsp/rings-resonator/: RingsDsp.h  RingsDspFunctions.h  RingsFmVoice.h  RingsModalResonator.h  RingsPatch.h  RingsPerformanceState.h  RingsPlucker.h  RingsString.h  RingsStringSynthOscillator.h  RingsStringSynthPart.h  RingsStringSynthVoice.h  RingsStrummer.h  RingsVoiceManager.h
include/tanh/dsp/synth/: Plucker.h  RingsFmVoice.h  (+6 more)
include/tanh/modulation/: InputEventQueue.h  LFOSource.h  ModulationMatrix.h  ModulationRouting.h  ModulationSource.h  ResolvedRouting.h  ResolvedTarget.h  SmartHandle.h
include/tanh/state/: Exceptions.h  ModulationScope.h  Parameter.h  ParameterDefinitions.h  ParameterListener.h  State.h  StateGroup.h  path_helpers.h
include/tanh/transport/: InternalTransportClock.h  TransportClock.h
include/tanh/utils/: RealtimeSanitizer.h
sanitizers/: asan_ignorelist.txt  asan_suppressions.txt  tsan_suppressions.txt
scripts/: resolve-team-id.sh  run-ios-device.sh  run-ios-sim.sh
src/: core.cpp
src/audio-io/: AndroidAudioDevices.cpp  AudioDeviceManager.cpp  AudioFileLoader.cpp  AudioFileSink.cpp  AudioPlayerSource.cpp  DataSource.cpp  DataSourceImpl.h  iOSAudioDevices.mm  miniaudio_impl.cpp
src/audio_io/: AndroidAudioDevices.cpp  AudioDeviceManager.cpp  AudioFileLoader.cpp  AudioFileSink.cpp  AudioPlayerSource.cpp  DataSource.cpp  DataSourceImpl.h  iOSAudioDevices.mm
src/core/: Dispatcher.cpp  Logger.cpp
src/dsp/: BaseProcessor.cpp  MetronomePlayer.cpp
src/dsp/audio/: RingBuffer.cpp
src/dsp/fx/: ConstellationReverb.cpp  IntellijelWavefolder.cpp  StereoFDN.cpp
src/dsp/granular/: GrainProcessor.cpp
src/dsp/metronome/: MetronomePlayer.cpp
src/dsp/resonator/: RingsFmVoice.cpp  RingsModalResonator.cpp  RingsResonator.cpp  RingsString.cpp  RingsStringSynthPart.cpp  SampleRateConverter.cpp
src/dsp/rings-resonator/: RingsFmVoice.cpp  RingsModalResonator.cpp  RingsString.cpp  RingsStringSynthPart.cpp  RingsVoiceManager.cpp  rings_lookup_tables.py
src/dsp/synth/: RingsFmVoice.cpp  RingsResonatorSynthProcessor.cpp  RingsStringSynthPart.cpp  RingsVoiceManager.cpp  SineProcessor.cpp
src/dsp/transport/: InternalTransportClock.cpp
src/dsp/utils/: ADSR.cpp  BrownianNoise.cpp  DspMath.cpp  DynamicAllpass.cpp  DynamicDelayLine.cpp  FrequencyShifter.cpp  HannWindow.cpp  Limiter.cpp  PitchShifter.cpp  Random.cpp  Scales.cpp  SineOscillator.cpp  SmoothedValue.cpp
src/modulation/: InputEventQueue.cpp  LFOSource.cpp  ModulationMatrix.cpp
src/state/: Parameter.cpp  State.cpp  StateGroup.cpp
src/transport/: InternalTransportClock.cpp
test/: .clang-tidy
test/audio-io/: CMakeLists.txt  test_AudioIO.cpp
test/audio_io/: CMakeLists.txt  test_AudioIO.cpp
test/core/: CMakeLists.txt  test_RCU.cpp
test/dsp/: CMakeLists.txt  generate_reference_fixtures.sh  generate_rings_reference.cpp  test_AudioBuffer.cpp  test_AudioBufferView.cpp  test_InternalTransportClock.cpp  test_Limiter.cpp  test_LinearSmootherBank.cpp  test_MetronomePlayer.cpp  test_RingBuffer.cpp  test_RingsDspFunctions.cpp  test_RingsResonatorCore.cpp  test_RingsResonatorSynthProcessor.cpp  test_StereoFDN.cpp
test/modulation/: CMakeLists.txt  DspFixture.h  TestHelpers.h  benchmark_ModulationMatrix.cpp  test_BaseProcessor.cpp  test_ConcurrentRebuild.cpp  test_CyclicModulation.cpp  test_DspFixture_Limiter.cpp  test_DspFixture_Reverb.cpp  test_DspFixture_Wavefolder.cpp  test_InputEventQueue.cpp  test_Integration.cpp  test_LFOSource.cpp  test_ModulationMatrix.cpp  test_ModulationMatrixCore.cpp  test_ModulationScope.cpp  test_PolyphonicModulation.cpp  test_ResolvedTarget.cpp  test_SmartHandle.cpp
test/state/: CMakeLists.txt  TestHelpers.h  benchmark_State.cpp  test_ParameterDefinitions.cpp  test_ParameterHandle.cpp  test_State.cpp  test_StateCore.cpp  test_StateNotifications.cpp  test_StateSerialization.cpp  test_StateThreadSafety.cpp
test/transport/: CMakeLists.txt
(+68 files in other folders)
